crates/math-core/tests/snapshots/conversion_test__cdots_before_close.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "{\\sum \\cdots}"
---
<math>
    <mrow>
        <mo lspace="0">∑</mo>
        <mo lspace="0">·</mo>
        <mo lspace="0" rspace="0.1667em">·</mo>
        <mo lspace="0" rspace="0">·</mo>
    </mrow>
</math>
