crates/math-core/tests/snapshots/conversion_test__cdots_before_open.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "4 + \\cdots ()"
---
<math>
    <mn>4</mn>
    <mo>+</mo>
    <mo lspace="0">·</mo>
    <mo lspace="0" rspace="0.1667em">·</mo>
    <mo lspace="0">·</mo>
    <mo stretchy="false">(</mo>
    <mo stretchy="false">)</mo>
</math>
