crates/math-core/tests/snapshots/conversion_test__colon_alone_group.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x{:}x"
---
<math>
    <mi>x</mi>
    <mo lspace="0" rspace="0">:</mo>
    <mi>x</mi>
</math>
