crates/math-core/tests/snapshots/conversion_test__colon_approx.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "a :\\approx b \\colonapprox c \\Colonapprox d \\coloncolonapprox e"
---
<math>
    <mi>a</mi>
    <mo lspace="0.2778em" rspace="0">:</mo>
    <mo lspace="0">≈</mo>
    <mi>b</mi>
    <mo lspace="0.2778em" rspace="0">∶</mo>
    <mo lspace="0">≈</mo>
    <mi>c</mi>
    <mo lspace="0.2778em" rspace="0">∶</mo>
    <mo lspace="0" rspace="0">∶</mo>
    <mo lspace="0">≈</mo>
    <mi>d</mi>
    <mo lspace="0.2778em" rspace="0">∶</mo>
    <mo lspace="0" rspace="0">∶</mo>
    <mo lspace="0">≈</mo>
    <mi>e</mi>
</math>
