crates/math-core/tests/snapshots/conversion_test__colon_first_group.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x{:x}"
---
<math>
    <mi>x</mi>
    <mrow>
        <mo lspace="0" rspace="0.2778em">:</mo>
        <mi>x</mi>
    </mrow>
</math>
