crates/math-core/tests/snapshots/conversion_test__colon_minus.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "a \\colonminus b \\colondash c \\coloncolonminus d \\Colondash e \\Dashcolon f"
---
<math>
    <mi>a</mi>
    <mo lspace="0.2778em" rspace="0">∶</mo>
    <mo lspace="0" rspace="0.2778em">−</mo>
    <mi>b</mi>
    <mo lspace="0.2778em" rspace="0">∶</mo>
    <mo lspace="0" rspace="0.2778em">−</mo>
    <mi>c</mi>
    <mo lspace="0.2778em" rspace="0">∶</mo>
    <mo lspace="0" rspace="0">∶</mo>
    <mo lspace="0" rspace="0.2778em">−</mo>
    <mi>d</mi>
    <mo lspace="0.2778em" rspace="0">∶</mo>
    <mo lspace="0" rspace="0">∶</mo>
    <mo lspace="0" rspace="0.2778em">−</mo>
    <mi>e</mi>
    <mo lspace="0.2778em" rspace="0">−</mo>
    <mo lspace="0" rspace="0">∶</mo>
    <mo lspace="0" rspace="0.2778em">∶</mo>
    <mi>f</mi>
</math>
